# madrpc-2

./: .dockerignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  LLM_REFERENCE.md  README.md  docker-compose.yml  test.js
.cargo/: config.toml
.claude/: ralph-loop.local.md
crates/madrpc-cli/: Cargo.toml
crates/madrpc-cli/src/: lib.rs  main.rs  tests.rs  top.rs
crates/madrpc-cli/tests/: cli_integration_test.rs
crates/madrpc-client/: Cargo.toml
crates/madrpc-client/src/: client.rs  lib.rs  pool.rs
crates/madrpc-client/tests/: http_client_test.rs
crates/madrpc-common/: Cargo.toml
crates/madrpc-common/benches/: protocol_bench.rs
crates/madrpc-common/src/: auth.rs  lib.rs  rate_limit.rs
crates/madrpc-common/src/protocol/: builtin.rs  error.rs  jsonrpc.rs  mod.rs  requests.rs  responses.rs  tests.rs
crates/madrpc-common/src/transport/: codec.rs  http.rs  mod.rs  quic.rs  server.rs  tcp.rs  tcp_server.rs  tests.rs
crates/madrpc-metrics/: Cargo.toml
crates/madrpc-metrics/benches/: metrics_bench.rs
crates/madrpc-metrics/src/: collector.rs  lib.rs  registry.rs  snapshot.rs
crates/madrpc-orchestrator/: Cargo.toml
crates/madrpc-orchestrator/benches/: load_balancer_bench.rs
crates/madrpc-orchestrator/src/: health_checker.rs  http_router.rs  http_server.rs  lib.rs  load_balancer.rs  node.rs  orchestrator.rs
crates/madrpc-orchestrator/tests/: http_orchestrator_test.rs
crates/madrpc-server/: Cargo.toml
crates/madrpc-server/examples/: test_quickjs.rs
crates/madrpc-server/src/: http_router.rs  http_server.rs  lib.rs  node.rs  resource_limits.rs
crates/madrpc-server/src/runtime/: bindings.rs  context.rs  context_pool.rs  conversions.rs  job_executor.rs  mod.rs  tests.rs
crates/madrpc-server/tests/: http_node_test.rs  integration_test.rs
crates/madrpc-server/tests/testcontainers/: mod.rs
examples/: README.md  basic-operations.js  distributed-wordcount.js  monte-carlo-pi.js
examples/distributed-wordcount/scripts/: wordcount.js
examples/monte-carlo-pi/: Cargo.toml  README.md
examples/monte-carlo-pi/scripts/: pi.js
examples/monte-carlo-pi/src/: main.rs
examples/simple-test/: Cargo.toml
examples/simple-test/src/: main.rs
reference/: ROADMAP.md
scripts/: build-test-image.sh
tests/: Cargo.toml  auto_register_test.rs  dangerous_code_paths.rs  http_integration_test.rs  integration_test.rs  metrics_info_test.rs
tests/testcontainers/: mod.rs
