[package]
name = "madrpc-integration-tests"
version.workspace = true
edition.workspace = true

[[test]]
name = "integration"
path = "integration_test.rs"

[dev-dependencies]
madrpc-common = { path = "../crates/madrpc-common" }
madrpc-server = { path = "../crates/madrpc-server" }
madrpc-orchestrator = { path = "../crates/madrpc-orchestrator" }
serde_json = "1.0"
tempfile = "3.0"
tokio = { version = "1", features = ["full"] }
rustls = "0.23"
