[package]
name = "madrpc-integration-tests"
version.workspace = true
edition.workspace = true

[[test]]
name = "integration"
path = "integration_test.rs"

[[test]]
name = "dangerous_code_paths"
path = "dangerous_code_paths.rs"

[[test]]
name = "http_integration"
path = "http_integration_test.rs"

[dev-dependencies]
madrpc-common = { path = "../crates/madrpc-common" }
madrpc-server = { path = "../crates/madrpc-server" }
madrpc-orchestrator = { path = "../crates/madrpc-orchestrator" }
madrpc-client = { path = "../crates/madrpc-client" }
serde_json = "1.0"
tempfile = "3.0"
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "io-util", "sync", "macros"] }
rustls = "0.23"
reqwest = { version = "0.12", features = ["json"] }
