[package]
name = "madrpc-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "madrpc"
path = "src/main.rs"

[dependencies]
madrpc-common = { path = "../madrpc-common" }
madrpc-server = { path = "../madrpc-server" }
madrpc-orchestrator = { path = "../madrpc-orchestrator" }
madrpc-client = { path = "../madrpc-client" }
madrpc-metrics = { path = "../madrpc-metrics" }
argh = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "io-util", "sync", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
serde_json = "1.0"
ratatui = "0.29"
crossterm = "0.28"

[dev-dependencies]
tempfile = "3"
