[package]
name = "madrpc-client"
version.workspace = true
edition.workspace = true

[dependencies]
madrpc-common = { path = "../madrpc-common" }
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
serde_json = "1.0"
rand = "0.8"
tracing = "0.1"
hyper = { version = "1.5", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
