[package]
name = "madrpc-common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
postcard = { version = "1.0", features = ["alloc"] }
quinn = "0.11"
rustls = { version = "0.23", features = ["ring"] }
tokio = { version = "1.0", features = ["full"] }
futures-util = "0.3"
rcgen = "0.13"
