[package]
name = "madrpc-common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "net", "time", "io-util", "sync", "macros"] }
tracing = "0.1"
hyper = { version = "1.5", features = ["http1"] }
http-body-util = "0.1"
