[package]
name = "madrpc-metrics"
version.workspace = true
edition.workspace = true

[dependencies]
madrpc-common = { path = "../madrpc-common" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
atomic = "0.6"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "io-util", "sync", "macros"] }
criterion = { workspace = true }

[[bench]]
name = "metrics_bench"
harness = false
