[package]
name = "madrpc-orchestrator"
version.workspace = true
edition.workspace = true

[dependencies]
axum = "0.8"
futures = "0.3"
hyper = { version = "1.5", features = ["http1"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
madrpc-common = { path = "../madrpc-common" }
madrpc-metrics = { path = "../madrpc-metrics" }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["full"] }
tracing = "0.1"
