[package]
name = "madrpc-orchestrator"
version.workspace = true
edition.workspace = true

[dependencies]
axum = "0.8"
futures = "0.3"
hyper = { version = "1.5", features = ["http1"] }
hyper-util = { version = "0.1", features = ["client-legacy", "tokio", "http1"] }
http-body-util = "0.1"
madrpc-client = { path = "../madrpc-client" }
madrpc-common = { path = "../madrpc-common" }
madrpc-metrics = { path = "../madrpc-metrics" }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "io-util", "sync", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "load_balancer_bench"
harness = false
