[package]
name = "madrpc-server"
version.workspace = true
edition.workspace = true

[dependencies]
madrpc-client = { path = "../madrpc-client" }
madrpc-common = { path = "../madrpc-common" }
madrpc-metrics = { path = "../madrpc-metrics" }
quick-js = "0.4"
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3.0"
