[package]
name = "madrpc-server"
version.workspace = true
edition.workspace = true

[dependencies]
madrpc-client = { path = "../madrpc-client" }
madrpc-common = { path = "../madrpc-common" }
madrpc-metrics = { path = "../madrpc-metrics" }
num_cpus = "1.16"
boa_engine = { path = "/tmp/boa/core/engine" }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3.0"
futures = "0.3"
